--- a/src/style.css
+++ b/src/style.css
@@ -32,12 +32,22 @@ form {
 .today-main {
     background-color: var(--background-main);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: var(--standard-gap);
     padding: var(--standard-padding);
     width: 100%
 }
+
+.left-today,
+.right-today {
+    display: flex;
+    flex-direction: column;
+    gap: var(--standard-gap);
+    padding: var(--standard-padding);
+}
+
+
 
 .today-lower {
     background-color: aqua;
